2017-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Fix getservbyport_r with 4 arguments

2017-08-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Call correct variant of getservbyname_r
	* config/amanda/syshacks.m4: Do not set GETSERVBYNAME_R5 and
	  GETSERVBYPORT_R5
	* config/amanda/amanda_configure.m4: use ax_func_which_getservbyname_r
	* config/macro-archive/ax_func_which_getservbyname_r.m4: New macro to
	  detect getservbyname_r variant

2017-07-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amssl.pl: Chomp openssl result

2017-07-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Fix test

2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Config/FoldingHash.pm: Fix use of Tie::StdHash

2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Fix aborted, set storage stats to
	  TERMINATED_*

2017-06-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-chunker+2taper-flush.pl,
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl,
	* installcheck/success-dumper-chunker+taper-flush.pl: Set reserve = 0

2017-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Set 'aborted'. Always set TERMINATED* on
	  dead_run
	* installcheck/Amanda_Rest_Runs.pl: Fix

2017-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (start_degraded_mode): Go in degraded mode if
	  there is no storage

2017-06-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: dp_degraded_modemust be TRUE if nb_storage == 0

2017-06-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Rest.pm: We need WWW::Curl::Easy version
	  4.14 or newer

2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix for x-amz-server-side-encryption
