@@ -1,3 +1,7 @@
+2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* amar-src/amar.c: Fix race with stop/start_read when record are
+	  already read
+
 2017-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/security-util.c: Fix getservbyport_r with 4 arguments
 
